--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,9 +7,15 @@ description: Custom Minecraft economy plugin with buying "Lucky Block" care pack
 commands:
   send:
     description: Send money to other people
-  shop:
-    description: Open the shop GUI
+  carepackage:
+    description: Open the care package GUI
+    aliases:
+      - cp
+      - cpshop
+      - carepackageshop
   balance:
     aliases:
       - bal
     description: Gets the player's current account balance
+  shop:
+    description: Open the mineral shop GUI
