Added new items to shop, add home, add teleport, add console prints for events

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -28,3 +28,18 @@ commands:
 
   goenable:
     description: Enable teleporting to you
+
+  sethome:
+    description: Set your home
+    aliases:
+      - sh
+
+  home:
+    description: Display your home location
+    aliases:
+      - h
+
+  info:
+    description: Displayed information about the plugin
+    aliases:
+      - commands
