Added auto saving and info command and communities stuff. idk a lot of things were added

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -49,6 +49,8 @@ commands:
 
   community:
     description: Community commands
+    aliases:
+      - c
 
   fbs:
     description: Open the Fill Block Shop menu
