Added some community updates, colorful chat, nicknames, bug fixes, and a few other things

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -65,3 +65,9 @@ commands:
 
   setbal:
     description: Allows the console to set a player's balance
+
+  colors:
+    description: Displays possible chat colors
+
+  nick:
+    description: Changes nickname
